--- a/OlaMundo.html
+++ b/OlaMundo.html
@@ -1,10 +1,8 @@
 <html>
-    <body style="
-            background-color: rgb(7, 137, 146); color: rgb(223, 207, 207);
-            font-size: 26px;
-            text-align: center;
-            height: 100;
-            margin: 0;">
-        <h1 style="line-height: 100vh;">Olá Mundo</h1>
-    </body>
+    <head>
+        <link rel="stylesheet" href="css/estilo.css" />
+    </head>
+        <body>
+            <h1>Olá Mundo</h1>
+        </body>
 </html>
